add_subdirectory( bookmarks )
add_subdirectory( filter )
add_subdirectory( archive )
add_subdirectory( settings )
add_subdirectory( applications )
add_subdirectory( trash )
add_subdirectory( network )
add_subdirectory( remote )
add_subdirectory( desktop )
add_subdirectory( recentdocuments )
add_subdirectory( thumbnail )
if (LIBSSH_FOUND)
  add_subdirectory(sftp)
endif()
if (MTP_FOUND)
  add_subdirectory(mtp)
endif()

add_subdirectory( floppy )
check_include_files(rpc/rpc.h HAVE_RPC_RPC_H)
add_feature_info("NFS kioslave" HAVE_RPC_RPC_H "The RPC library is needed to build the NFS kioslave")
if(HAVE_RPC_RPC_H)
  add_subdirectory(nfs)
endif()

if(SAMBA_FOUND)
    add_subdirectory(smb)
endif()
