add_subdirectory( archive )
add_subdirectory( settings )
add_subdirectory( applications )
add_subdirectory( trash )
add_subdirectory( network )
add_subdirectory( remote )
add_subdirectory( desktop )
add_subdirectory( recentdocuments )
add_subdirectory( thumbnail )
if(LIBSSH_FOUND)
    add_subdirectory(sftp)
endif()
if(MTP_FOUND)
    add_subdirectory(mtp)
endif()
if(GPHOTO2_FOUND)
    add_subdirectory(camera)
endif()

add_subdirectory( floppy )
